--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
     "author": "Scott Morin <scott@journeyedu.co>",
     "license": "MIT",
     "dependencies": {
+        "darksky": "^0.1.2",
+        "inquirer": "^7.0.4",
         "nodemon": "^2.0.2",
-        "request": "^2.88.2"
+        "opencage-api-client": "^0.5.1",
+        "request": "^2.88.2",
+        "request-promise": "^4.2.5",
+        "wordnik": "^0.0.2"
     }
 }
